--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "jshint": "^2.9.5",
     "nyc": "^11.4.1",
     "serial-mocha": "0.0.4"
+  },
+  "dependencies": {
+    "http": "0.0.0",
+    "simple-ee": "^0.2.1",
+    "socket.io": "^2.0.4",
+    "url": "^0.11.0"
   }
 }
